--- a/css/style.css
+++ b/css/style.css
@@ -148,11 +148,40 @@ h3{
     background-color: #ececec;
     padding: 4% 0;
 }
-.food-menu-box-4 {
+.food-menu-box-6 {
     border: 1px solid black;
     width: 48%;
     margin: 1%;
     padding: 2%;
     float: left;
     background-color: white;
+    border-radius: 15px;
+}
+.food-menu-img{
+    width: 25%;
+    height: 20%;
+    float: left;
+}
+.food-menu-desc{
+    width: 60%;
+    height: 25%;
+    margin-left: 4%;
+    float: left;
+}
+.food-price{
+    font-size: 1.2rem;
+    margin: 2% 0;
+}
+.food-detail{
+    font-size: 1rem;
+    color: #b2bec3;
+}
+
+/* CSS for social media section */
+.social ul{
+    list-style: none;
+}
+.social ul li{
+    display: inline;
+    padding: 1%;
 }
