--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ a:hover{
 h2{
     color: #2f2f2f;
     font-size: 2rem;
+    margin-bottom: 2%;
 }
 h3{
     font-size: 1.5rem;
@@ -88,7 +89,7 @@ h3{
 
 /* CSS for navbar section */
 .logo{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 10%;
     height: 10%;
     float: left ;
@@ -131,7 +132,7 @@ h3{
     padding: 4% 0;
 }
 .box-3 {
-    border: 1px solid #000000;
+    /* border: 1px solid #000000; */
     width: 28%;
     height: 50%;
     float: left;
@@ -149,7 +150,7 @@ h3{
     padding: 4% 0;
 }
 .food-menu-box-6 {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 48%;
     margin: 1%;
     padding: 2%;
@@ -184,4 +185,67 @@ h3{
 .social ul li{
     display: inline;
     padding: 1%;
+}
+.footer .container{
+    border-top: 1px solid #7f4d4d4d;
+}
+
+/* CSS for Mobile Size or Smaller Screen */
+@media only screen and (max-width: 768px){
+    .logo{
+        width: 60%;
+        height: 60%;
+        float: none;
+        margin: 1% auto;
+    }
+    .menu ul {
+        text-align: center;
+    }
+    .menu ul li{
+        padding: 2%;
+    }
+
+    .food-search input[type="search"]{
+        width: 90%;
+        margin-bottom: 5%;
+        padding: 2%;
+    }
+
+    .btn{
+        width: 91%;
+        padding: 2%;
+        margin-bottom: 3%;
+    }
+    .food-search{
+        padding: 10% 0;
+    }
+    .category{
+        padding: 10% 0;
+        
+    }
+    .category .container {
+        margin-right: 5%;
+        display: flex;
+    }
+    h2{
+        margin-bottom: 10%;
+    }
+    .box-3 {
+        width: 90%;
+        margin: 4% auto;
+    }
+    .food-menu{
+        padding: 10% 0;
+    }
+    .food-menu .container{
+        margin-right: 5%;
+    }
+    .food-menu-box-6 {
+        width: 90%;
+        padding: 5% 5% 0 5%;
+        margin-bottom: 5%;
+    }
+    .social{
+        padding: 5% 0;
+    }
 }
